viya/sas-bases/overlays/network/ingress/components/sas-scheduler/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /scheduler/
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-scheduler
    sas.com/admin: namespace
  name: sas-scheduler
spec:
  rules:
  - host: $(INGRESS_HOST)
    http:
      paths:
      - backend:
          serviceName: sas-scheduler
          servicePort: 80
        path: /scheduler
